# 012-trit-search

./: .gitignore  DOCS.md  FILES.md  LICENSE  OBSERVE.md  OBSERVE.spec  PORTING.md  README.md  TritSearch.spec  add_directional_evidence.py  apply_compound_signal.py  arnold_tongues_gated_rotor.py  ast_entanglement.py  bcq_cpu.py  benchmark_3way.py  binary_vs_ternary_vs_triadic.py  bitnet_real.py  bitnet_run.py  build_all.py  build_linux.sh  build_mac.sh  ca_build.py  ca_levers.py  ca_levers_followup.py  ca_levers_followup_run.txt  ca_levers_quick.py  ca_levers_run.txt  ca_scratch.py  ca_velocity.py  ca_velocity_run.txt  calibrate_consensus.py  calibrate_cross_language.py  calibrate_genuine.py  code_references.py  code_references_output2.txt  code_references_output3.txt  code_references_output4.txt  code_references_results.json  code_references_smoketest.txt  compound_signal_results.json  (+137 more)
.github/workflows/: build.yml
hardware/: 012_top.sv  consensus_gate.sv  ternary_rtl.py  testbench.sv  triadic_pe.sv  trit_add.sv  trit_mac.sv  trit_not.sv  trit_pkg.sv  trit_register.sv  vivado_synth.tcl
paper/: 012_paper.md  012_paper.tex  NEXT_evolutionary_compute.md  SCOPING_RULE_ZENODO.txt  compute_ca_findings.md  cross_substrate_symmetry_findings.md  dna_ternary_findings.md  ensemble_ml_findings.md  evolve_compute_findings.md  figures.py  from_scratch_findings.md  grep_vs_semantic_findings.md  grow_ca_findings.md  npc_consensus_findings.md  observer_shadow_light_theory.md  order_acceptance_findings.md  quality_benchmark_findings.md  rank_reorder_findings.md  residual_scale_findings.md  resonance_domain.md  scoping_rule_paper.tex  tmr_findings.md  token_reduction_findings.md  triadic_robustness_findings.md  weight_quantization_findings.md  zero_trit_findings.md
tritkit/: .gitignore  README.md  __init__.py  convert.py  export.py  kernel.py  layers.py  profile.py  pyproject.toml  qat.py  quant.py  twotimescale.py
tritkit/bench/: __init__.py  classify.py  edge_detect.py  results_classify.json  results_edge_detect.json
